# Local_LLM_Cache

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  config.example.yaml  config.yaml
examples/: idle_flush_example.rs
sh/: generate_sqlx_json.sh  test.sh
src/: lib.rs  main.rs  server.rs  utils.rs
src/handlers/: api_handler.rs  chat_completion_handler.rs  proxy_handler.rs
src/models/: api_model.rs
src/proto/: api.proto
src/utils/: cache_maintenance.rs  config.rs  context_trim.rs  db.rs  db_writer.rs  http_client.rs  idle_flush.rs  logging.rs  memory_cache.rs  mod.rs
