[package]
name = "llm_api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm_api"
path = "src/main.rs"

[lib]
name = "llm_api"
path = "src/lib.rs"

[dependencies]
prost = "0.13.5"
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11.0-pre.5"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
chrono = "0.4.40"
brotli = "7.0.0"
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "time", "macros"] }  # 数据库操作
futures = "0.3.31"
tower = { version = "0.5.2", features = ["limit"]}
serde_yaml = "0.9.34"
rand_distr = "0.5.1"
rand = "0.9.0"

[build-dependencies]
prost-build = "0.13.5"

[workspace]
members = ["."]
